--- a/cantoN-rules(Special).ini
+++ b/cantoN-rules(Special).ini
@@ -9,7 +9,7 @@ rename_node=Peter佬专线@
 rename_node=油佬专线@
 
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw/rules/main/cantoN-rules.txt
-clash_rule_base=https://raw.githubusercontent.com/alanzsw/rules/main/cantoN-rules.yaml
+clash_rule_base=https://raw.githubusercontent.com/alanzsw/rules/main/cantoN-rules(Special).yaml
 
 exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|海外|续费|临时)
 
