--- a/cantoN-rules(Normal).ini
+++ b/cantoN-rules(Normal).ini
@@ -1,6 +1,7 @@
 [custom]
 rename_node=Peter佬专线@
 rename_node=油佬专线@
+rename_node=广港@粤A
 
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw/rules/main/cantoN-rules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw/rules/main/cantoN-rules(Normal).yaml
